@@ -1,3 +1,10 @@
+2018-11-17  Mark Wielaard  <mark@klomp.org>
+
+	* run-strip-version.sh: New test.
+	* testfile-version.bz2: New test file.
+	* Makefile.am (TESTS): Add run-strip-version.sh.
+	(EXTRA_DIST): Add run-strip-version.sh and testfile-version.bz2.
+
 2018-11-09  Mark Wielaard  <mark@klomp.org>
 
 	* run-strip-reloc.sh: Also test testfile-debug-rel-ppc64-z.o
